Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Advertiments d'actualització",
     "correct": "Correcte",
     "cost": "Cost",
+    "cost-abb": "Cost",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
