--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Permitir la venta sin stock en nuevos productos",
     "allow-update": "Permitir modificar",
-    "already-installed": "Ya instalado",
+    "already-installed": "Již nainstalováno",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Importe",
@@ -333,6 +333,7 @@
     "core-update-warning": "Advertencias de actualización",
     "correct": "Správně",
     "cost": "Náklad",
+    "cost-abb": "Coste",
     "cost-price": "Precio de coste",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
@@ -820,7 +821,7 @@
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Token přístupu pro soubor %file% není platný nebo vypršel.",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Dirección web no válida: %web%",
     "invoice": "Factura",
@@ -926,7 +927,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando controlador: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Pronájem prostor",
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Bloquear asiento",
@@ -997,7 +998,7 @@
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Min. verze jádra",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
@@ -1060,7 +1061,7 @@
     "next": "Siguiente",
     "nick": "Apodo",
     "no": "No",
-    "no-admin": "No administrador",
+    "no-admin": "Neadmin",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "Žádný dokument nebyl vybrán",
@@ -1113,7 +1114,7 @@
     "only-closed": "Solamente cerrados",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Mostrar solamente registros del usuario",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Zaškrtnutím možnosti zobrazení pouze záznamů uživatele uvidí pouze záznamy, které vytvořil on sám nebo které má přiřazeny (jako uživatel nebo agent)",
     "only-pending": "Sólo Pendientes",
     "only-suspended": "Solamente suspendidos",
     "open": "Abrir",
@@ -1648,7 +1649,7 @@
     "two-factor-auth-disabled": "Dvoufázové ověření je deaktivováno",
     "two-factor-auth-enable": "Aktivovat dvoufaktorové ověření",
     "two-factor-auth-enabled": "Dvoufázové ověření je aktivováno",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Nastavte aplikaci Google Authenticator pomocí QR, zadejte sem kód a stiskněte ověřit pro dokončení procesu aktivace.",
     "two-factor-code": "Kód dvoufaktorového ověření",
     "two-factor-enabled": "Aktivovat dvoufázovou autentizaci",
     "type": "Tipo",
@@ -1676,7 +1677,7 @@
     "unlink-install-ok": "Instalace byla úspěšně odebrána záznamu.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
-    "unsafe-file": "Nesecure archivo",
+    "unsafe-file": "Nesecure soubor",
     "unsafe-file-p": "Z bezpečnostních důvodů bráníme stahování některých typů souborů, jako je tento: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
