--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Aktualisierungswarnungen",
     "correct": "Korrekt",
     "cost": "Kosten",
+    "cost-abb": "Kosten",
     "cost-price": "Kostenpreis",
     "cost-price-policy": "Kosten Preispolitik",
     "counterpart": "Gegenstück",
@@ -819,7 +820,7 @@
     "invalid-iso-code": "Ungültiger ISO-Code ''%iso-code%",
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Ungültiges Token",
     "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Ungültige Berechtigung: %permission%. Die verfügbaren Berechtigungen sind access, delete, export, import, update und only-owner-data.",
     "invalid-web": "Ungültige Webadresse",
@@ -926,7 +927,7 @@
     "list": "Liste",
     "load-def-acc-plan": "Laden Sie den Standardkontenplan",
     "loading-controller": "Controller laden: '0'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Mietpreise für lokale Geschäfte",
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
@@ -997,7 +998,7 @@
     "meta-description": "FacturaScripts ist ein Billing und Accounting-Software für kleine Unternehmen. Es ist freie Software unter der GNU\/LGPL Lizenz.",
     "method-payment": "Zahlungsart",
     "mime-type": "Mime-Typ",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Minimale Kernversion",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
@@ -1073,7 +1074,7 @@
     "no-reference": "Keine Referenz",
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Es gibt derzeit keine Updates.",
     "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "Nicht bearbeitbare Spalten: %columns%",
     "non-editable-document": "Nicht bearbeitbares Dokument",
@@ -1113,7 +1114,7 @@
     "only-closed": "Nur geschlossen",
     "only-insert": "Nur hinzufügen",
     "only-owner-data": "Nur Benutzerdaten anzeigen",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Mit der Option, nur Benutzerdaten anzuzeigen, kann der Benutzer nur die von ihm erstellten oder ihm zugewiesenen Datensätze sehen (als Benutzer oder Agent).",
     "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
@@ -1691,7 +1692,7 @@
     "updates-available": "Verfügbare Updates",
     "updates-available-p": "Es gibt verfügbare Updates für FacturaScripts. Bitte klicken Sie auf den Aktualisierer und laden Sie die neue Version herunter. Die Updates beheben Fehler und fügen neue Funktionen hinzu.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Beta-Updates sind aktiviert. Diese Updates wurden nicht getestet und werden nur in Testinstallationen empfohlen.",
     "updating-attached-relations": "Aktualisierung der Zähler für angehängte Dateien",
     "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
