--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Update warnings",
     "correct": "Correct",
     "cost": "Cost",
+    "cost-abb": "Cost",
     "cost-price": "Cost price",
     "cost-price-policy": "Cost price policy",
     "counterpart": "Counterpart",
@@ -393,7 +394,7 @@
     "database": "Database",
     "database-error": "Error connecting to the database",
     "database-error-pc": "🖥️ If the program is installed on your PC, you probably forgot to activate MySQL or it has problems activating.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 If the program is installed on a server or hosting, you may have changed the user or password for the database, or you may have reached some usage limit of the hosting.",
     "database-name-must-be-lowercase": "The database name must be lowercase",
     "date": "Date",
     "date-in": "Date in",
@@ -582,7 +583,7 @@
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "tax exception for passive subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
     "es-tax-regime-especial-agp": "Special regime for agriculture, livestock and fisheries",
@@ -1073,7 +1074,7 @@
     "no-reference": "No reference",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "No updates at this time",
     "non-editable-accounting-entry": "Non-editable accounting entry",
     "non-editable-columns": "Non editable columns: %columns%",
     "non-editable-document": "Non editable document",
@@ -1113,7 +1114,7 @@
     "only-closed": "Only closed",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Show only user records",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "By checking the option to show only user records, the user will only be able to see records that he or she has created or that are assigned to them (as a user or agent)",
     "only-pending": "Only Pending",
     "only-suspended": "Only suspended",
     "open": "Open",
@@ -1199,7 +1200,7 @@
     "phones": "Phones",
     "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "PHP extensions",
     "php-extensions-required": "Required PHP extensions",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
     "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
@@ -1440,7 +1441,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Server",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Max file upload size",
     "server-software": "Server Software",
     "service": "Service",
     "services": "Services",
@@ -1676,7 +1677,7 @@
     "unlink-install-ok": "Installation cleared registry successfully.",
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
-    "unsafe-file": "Unsafe file.",
+    "unsafe-file": "Unsafe file",
     "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
@@ -1761,7 +1762,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
-    "work-certification": "Certificación",
+    "work-certification": "Certification",
     "work-events": "Working events",
     "working-hours": "Work schedule",
     "works": "Works",
