--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock-n": "Produktu berriak stockik gabe saltzea baimendu",
     "allow-update": "Onartu eguneratzea",
     "already-installed": "Ya instalado",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Programa jadanik instalatuta dago",
     "always-to-company-email": "Beti enpresaren posta elektronikora",
     "amount": "Zenbatekoa",
     "amount-without-discount": "Prezioa beherapenik gabe",
@@ -333,6 +333,7 @@
     "core-update-warning": "Eguneraketa oharrak",
     "correct": "Zuzena",
     "cost": "Kostua",
+    "cost-abb": "Kostua",
     "cost-price": "Kostu prezioa",
     "cost-price-policy": "Kostuen prezio politika",
     "counterpart": "Kontrakontua",
@@ -393,7 +394,7 @@
     "database": "Datu basea",
     "database-error": "Errorea datubasearekin konetatzerakoan",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 programaren instalazioa zerbitzari edo hosting batean badago, litekeena da datu-basearen erabiltzailea edo pasahitza aldatzea, edo hostingaren erabilera-muga batera iristea.",
     "database-name-must-be-lowercase": "Datu-basearen izena minuskuletan izan behar du",
     "date": "Data",
     "date-in": "Sarrera data",
@@ -997,7 +998,7 @@
     "meta-description": "FacturaScripts ETE-entzako fakturazio eta kontabilitate softwarea da. GNU\/LGPL lizentziapeko software librea da.",
     "method-payment": "Ordainketa mota",
     "mime-type": "Mime Mota",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Bertsio min. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Gutxieneko zenbatekoa IFK\/IFZrekin",
     "minimum-amount-without-cifnif": "Gutxieneko zenbatekoa IFK\/IFZ gabe",
@@ -1676,7 +1677,7 @@
     "unlink-install-ok": "Instalazioa ondo ezabatu da erregistrotik.",
     "unlock-entry": "Desblokeatu",
     "unpaid": "Ordaindu gabe",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Fitxategi ez segurua",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Idazpenara arte",
     "until-date": "Data arte",
@@ -1690,8 +1691,8 @@
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
     "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning": "Beta eguneratzeak aktibatu dira",
+    "updates-beta-warning-p": "⚠️ Eguneraketak beta aktibatuta ditu. Eguneraketa hauek ez dira probatu eta probako instalazioetan soilik gomendatzen dira.",
     "updating-attached-relations": "Erantsitako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
