--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correct",
     "cost": "Coût",
+    "cost-abb": "Coût",
     "cost-price": "Prix de revient",
     "cost-price-policy": "Politique de prix de revient",
     "counterpart": "Compensation",
@@ -392,7 +393,7 @@
     "data-source": "Données d'origine",
     "database": "Base de données",
     "database-error": "Erreur de connexion à la base de données",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Si le programme est installé sur votre PC, il est probable que vous ayez oublié d'activer MySQL ou qu'il y ait des problèmes d'activation.",
     "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "Le nom de la base de données doit être en minuscules",
     "date": "Date",
@@ -590,11 +591,11 @@
     "es-tax-regime-general": "Régime général",
     "es-tax-regime-gold": "Régime spécial de l'or d'investissement",
     "es-tax-regime-group-entities": "Régime spécial de groupe d'entités",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "régime fiscal de guichet unique",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Régime simplifié",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-retail-traders": "régime fiscal spécial pour les détaillants",
+    "es-tax-regime-special-small-business": "régime fiscal spécialement conçu pour les petites entreprises",
     "es-tax-regime-surcharge": "Surtaxe d'équivalence",
     "es-tax-regime-telecom": "Régimes spéciaux applicables aux services de télécommunications, de radiodiffusion ou de télévision et aux services fournis par voie électronique",
     "es-tax-regime-travel": "Régime spécial des agences de voyage",
@@ -1073,7 +1074,7 @@
     "no-reference": "Pas de référence",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Pas de mises à jour pour le moment",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
     "non-editable-columns": "Colonnes non modifiables : %columns%",
     "non-editable-document": "Document non éditable",
@@ -1199,8 +1200,8 @@
     "phones": "Téléphones",
     "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
-    "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions": "Extensions PHP",
+    "php-extensions-required": "Extensions PHP requises",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
     "php-version-too-new": "Il est recommandé d'utiliser une version de PHP entre %min_version% et %max_version%. Vous avez actuellement la %version%",
     "physical-stock": "Stock physique",
@@ -1226,7 +1227,7 @@
     "plugin-update": "Mise à jour du module %pluginName% vers la version %version%",
     "plugins": "Modules",
     "plugins-p": "Les modules permettent d'ajouter de nouvelles fonctionnalités. Ajoutez ceux dont vous avez besoin maintenant. Vous pourrez toujours le faire quand vous le souhaitez depuis le menu Administration.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugins requis",
     "points": "Points",
     "points-of-interest": "Points d'intérêt",
     "port": "Port",
@@ -1644,7 +1645,7 @@
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
     "two-factor-auth": "Authentification à deux facteurs",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Désactiver l'authentification à deux facteurs",
     "two-factor-auth-disabled": "Authentification à deux facteurs désactivée",
     "two-factor-auth-enable": "Activer l'authentification à deux facteurs",
     "two-factor-auth-enabled": "Authentification à 2 facteurs activée",
@@ -1676,7 +1677,7 @@
     "unlink-install-ok": "L'installation a été supprimée avec succès du registre.",
     "unlock-entry": "Déverrouiller",
     "unpaid": "Non payé",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Fichier non sécurisé",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Jusqu'à l'entrée",
     "until-date": "Jusqu'à la date",
