--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Avisos de actualización",
     "correct": "Correcto",
     "cost": "Custo",
+    "cost-abb": "Custo",
     "cost-price": "Prezo de custo",
     "cost-price-policy": "Política de actualización de prezos de custo",
     "counterpart": "Contrapartida",
@@ -573,8 +574,8 @@
     "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
-    "es-tax-exception-art-14": "excepción fiscai art. 14",
-    "es-tax-exception-art-7": "excepción fiscai art. 7",
+    "es-tax-exception-art-14": "excepción fiscal art. 14",
+    "es-tax-exception-art-7": "excepción fiscal art. 7",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
     "es-tax-exception-e2": "España: excepción polo artigo 21 da Ley do IVE",
     "es-tax-exception-e3": "España: excepción polo artigo 22 da Ley do IVE",
@@ -582,7 +583,7 @@
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Réxime especial da agricultura, gandería e pesca",
@@ -819,7 +820,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' non válido",
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token non válido",
     "invalid-token-p": "O token de acceso para o arquivo %file% non é válido ou caducou",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Enderezo web non válido",
@@ -926,7 +927,7 @@
     "list": "Listaxe",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando o controlador: '%controllerName%'",
-    "local-business-rental": "Alugueiro locais",
+    "local-business-rental": "Alugueiro de locais",
     "location": "Localización",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear asento",
@@ -1440,7 +1441,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Tamaño máx. de subida de arquivos",
     "server-software": "Software do servidor",
     "service": "Servizo",
     "services": "Servizos",
@@ -1775,7 +1776,7 @@
     "years": "Anos",
     "yes": "Si",
     "yesterday": "Onte",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Podes ordenar as imaxes arrastrándoas",
     "you-cant-delete-primary-variant": "Non podes eliminar a variante principal do produto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
