--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Verkauf ohne Lagerbestand zulassen",
     "allow-sale-without-stock-n": "consentire-vendita-senza-stock-n",
     "allow-update": "Consenti aggiornamento",
-    "already-installed": "Ya instalado",
+    "already-installed": "Già installato",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Sempre alla mail aziendale",
     "amount": "Quantità",
@@ -333,6 +333,7 @@
     "core-update-warning": "Avvisi di aggiornamento",
     "correct": "Corretto",
     "cost": "Costo",
+    "cost-abb": "Costi",
     "cost-price": "Prezzo di costo",
     "cost-price-policy": "politica dei prezzi di costo",
     "counterpart": "Compensativo",
@@ -392,8 +393,8 @@
     "data-source": "Origine dei dati",
     "database": "Database",
     "database-error": "Errore di connessione al database",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 se il programma è installato su un server o hosting, probabilmente hai cambiato l'utente o la password del database, oppure hai raggiunto un limite di utilizzo dell'hosting.",
+    "database-error-pc": "🖥️ Se il programma è installato sul tuo PC, probabilmente ti sei dimenticato di attivare MySQL o ha problemi ad attivarsi.",
+    "database-error-server": "🌎 Se il programma è installato su un server o hosting, probabilmente hai cambiato l'utente o la password del database, oppure hai raggiunto un limite di utilizzo dell'hosting.",
     "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
     "date": "data",
     "date-in": "Data in",
@@ -582,7 +583,7 @@
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
     "es-tax-exception-location-rules": "regole di eccezione fiscale per posizione",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "eccezione fiscale es. soggetto passivo",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
     "es-tax-regime-especial-agp": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
@@ -820,7 +821,7 @@
     "invalid-number": "Numero non valido: %number%",
     "invalid-request": "Richiesta non valida",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Il token di accesso per il file %file% non è valido o è scaduto",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Indirizzo web non valido: %web%",
     "invoice": "fattura",
@@ -997,7 +998,7 @@
     "meta-description": "FacturaScripts è un software di fatturazione e contabilità per le piccole imprese. Si tratta di software libero sotto licenza GNU \/ LGPL.",
     "method-payment": "Metodo di pagamento",
     "mime-type": "Tipo MIME",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Versione min. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Importo minimo con CIF\/NIF",
     "minimum-amount-without-cifnif": "Importo minimo senza CIF\/NIF",
@@ -1073,7 +1074,7 @@
     "no-reference": "Senza riferimento",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Non ci sono aggiornamenti in questo momento",
     "non-editable-accounting-entry": "Assegnazione non modificabile",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
@@ -1200,7 +1201,7 @@
     "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
     "php-extension-not-found": "Non hai installato l'estensione PHP %extension%.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Estensioni PHP richieste",
     "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
     "php-version-too-new": "Si raccomanda di utilizzare una versione di PHP tra la %min_version% e la %max_version%. Attualmente hai la %version%",
     "physical-stock": "Stock fisico",
@@ -1677,7 +1678,7 @@
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
     "unsafe-file": "File non sicuro",
-    "unsafe-file-p": "Per motivi di sicurezza impediamo i download di alcune tipologie di file, come questo: %file%",
+    "unsafe-file-p": "Per motivi di sicurezza impediamo i download di alcuni tipi di file, come questo: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
     "until-subaccount": "Fino a subconto",
