--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Zezwól na modyfikację",
     "already-installed": "Ya instalado",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Program jest już zainstalowany",
     "always-to-company-email": "Zawsze na email firmy",
     "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
@@ -333,6 +333,7 @@
     "core-update-warning": "Ostrzeżenia o aktualizacji",
     "correct": "Correcto",
     "cost": "Coste",
+    "cost-abb": "Koszt",
     "cost-price": "Cena kosztu",
     "cost-price-policy": "Polityka ceny kosztu",
     "counterpart": "Kontrahent",
@@ -820,7 +821,7 @@
     "invalid-number": "Nieprawidłowy numer: %number%",
     "invalid-request": "Nieprawidłowe żądanie",
     "invalid-token": "Token nie jest ważny",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Token dostępu do pliku %file% jest nieprawidłowy lub wygasł",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Faktura",
@@ -926,7 +927,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Wczytaj domyślny plan rachunkowości",
     "loading-controller": "Ładowanie kontrolera: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Wynajem lokali",
     "location": "Lokalizacja",
     "lock-accounting": "Zablokować księgowość",
     "lock-entry": "Zablokuj wpis",
@@ -997,7 +998,7 @@
     "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
     "mime-type": "Typ MIME",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Minimalna wersja Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimalna kwota z CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
@@ -1073,7 +1074,7 @@
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Brak aktualizacji w tej chwili",
     "non-editable-accounting-entry": "Nieedytowalny wpis księgowy",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Dokument nieedytowalny",
@@ -1690,8 +1691,8 @@
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning": "Aktualizacje beta są aktywowane",
+    "updates-beta-warning-p": "⚠️ Aktualizacje beta są aktywowane. Te aktualizacje nie były testowane i są zalecane tylko w instalacjach testowych.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Załadowano w",
@@ -1761,7 +1762,7 @@
     "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
     "wizard-plugins": "Wtyczka to dodatek, który dodaje nowe funkcjonalności. Wybierz wtyczki, które chcesz aktywować od razu, lub zrób to później z panelu sterowania.",
-    "work-certification": "Certificación",
+    "work-certification": "Certyfikacja",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
     "works": "Prace",
