--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
     "already-installed": "Já instalado",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
     "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
@@ -333,6 +333,7 @@
     "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
     "cost": "Custo",
+    "cost-abb": "Custo",
     "cost-price": "Preço de custo",
     "cost-price-policy": "Política de preço de custo",
     "counterpart": "Contrapartida",
@@ -393,7 +394,7 @@
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso do hospedagem.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data de entrada",
@@ -820,7 +821,7 @@
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Solicitação inválida",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou expirou",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -1649,7 +1650,7 @@
     "two-factor-auth-enable": "Ativar autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
     "two-factor-auth-p": "Configura o aplicativo Google Authenticator usando o QR, insira o código aqui e pressione verificar para completar o processo de ativação.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Código de dois fatores",
     "two-factor-enabled": "Ativar autenticação em 2 etapas",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
@@ -1691,7 +1692,7 @@
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Você ativou as atualizações beta. Essas atualizações não foram testadas e são recomendadas apenas em instalações de teste.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
