--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -91,7 +91,7 @@
     "allow-sale-without-stock": "Permitir venda sem estoque",
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
-    "already-installed": "Ya instalado",
+    "already-installed": "Já instalado",
     "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Sempre para o email da empresa",
     "amount": "Montante",
@@ -333,6 +333,7 @@
     "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
     "cost": "Custo",
+    "cost-abb": "Custo",
     "cost-price": "Preço de custo",
     "cost-price-policy": "Política de preço de custo",
     "counterpart": "Contrapartida",
@@ -670,7 +671,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Não se pode escrever sobre as pastas de FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
     "footer": "Rodapé",
@@ -820,7 +821,7 @@
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Pedido não válido",
     "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou está expirado",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -1084,7 +1085,7 @@
     "not-enough-stock": "Não há stock suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
-    "not-registered": "Não registrada",
+    "not-registered": "Não registada",
     "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1113,7 +1114,7 @@
     "only-closed": "Apenas fechado",
     "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Marcando a opção de mostrar apenas registos do utilizador, apenas poderá ver registos que ele criou ou que têm atribuídos (como utilizador ou agente)",
     "only-pending": "Só pendentes",
     "only-suspended": "Apenas suspensos",
     "open": "Abrir",
