--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Advertències d'actualització",
     "correct": "Correcte",
     "cost": "Cost",
+    "cost-abb": "Cost",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
@@ -392,7 +393,7 @@
     "data-source": "Senyes d'orige",
     "database": "base de dades",
     "database-error": "Error al connectar a la base de dades",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Si el programa està instal·lat en el teu PC, probablement se t'haja oblidat activar MySQL o tinga problemes per activar-se.",
     "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "El nom de la base de senyes deu estar en minúscules",
     "date": "Data",
@@ -670,7 +671,7 @@
     "fixed-value": "Valor fix",
     "flag": "Bandera",
     "folder-not-writable": "No pots escriure en la carpeta de FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "No se pot escriure sobre les carpetes de FacturaScripts: %folders%",
     "font": "Tipo de lletra",
     "font-size": "font-size",
     "footer": "Pié de página",
@@ -926,7 +927,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar pla comptable predeterminat",
     "loading-controller": "Carregant el controlador: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Lloguer locals",
     "location": "Localisació",
     "lock-accounting": "Bloquejar comptabilitat",
     "lock-entry": "Bloquejar assentament",
