--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -333,6 +333,7 @@
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
     "cost": "Coste",
+    "cost-abb": "Coste",
     "cost-price": "Precio de costo",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
